tests/ui/consts/assert-type-intrinsics.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/assert-type-intrinsics.rs:12:9
   |
LL |         MaybeUninit::<!>::uninit().assume_init();
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'aborted execution: attempted to instantiate uninhabited type `!`', $DIR/assert-type-intrinsics.rs:12:36

error[E0080]: evaluation of constant value failed
  --> $DIR/assert-type-intrinsics.rs:16:9
   |
LL |         intrinsics::assert_mem_uninitialized_valid::<&'static i32>();
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'aborted execution: attempted to leave type `&i32` uninitialized, which is invalid', $DIR/assert-type-intrinsics.rs:16:9

error[E0080]: evaluation of constant value failed
  --> $DIR/assert-type-intrinsics.rs:20:9
   |
LL |         intrinsics::assert_zero_valid::<&'static i32>();
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'aborted execution: attempted to zero-initialize type `&i32`, which is invalid', $DIR/assert-type-intrinsics.rs:20:9

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0080`.
